--- a/src/components/layouts/home-layout/index.scss
+++ b/src/components/layouts/home-layout/index.scss
@@ -1,4 +1,68 @@
-.home-layout-wrapper {
-  border: 1px solid red;
-  padding: 20px;
+.home-layout {
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 50px;
+  .home-banner {
+    padding: 2rem 0;
+    background: #5cb85c;
+    box-shadow: inset 0 8px 8px -8px rgba(0, 0, 0, 0.3),
+      inset 0 -8px 8px -8px rgba(0, 0, 0, 0.3);
+    &-title {
+      color: #fff;
+      text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
+      font-weight: 700;
+      text-align: center;
+      font-size: 3.5rem;
+      padding-bottom: 0.5rem;
+    }
+    &-subtitle {
+      color: #fff;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: 300;
+      margin-bottom: 0px;
+    }
+  }
+  .home-header {
+    position: sticky;
+    top: 0;
+    display: flex;
+    align-items: center;
+    background: #fff;
+    z-index: 1;
+  }
+  .home-content {
+    padding: 1.5rem 4rem;
+    background: #fff;
+  }
+  .home-footer {
+    position: absolute;
+    bottom: 0;
+    height: 50px;
+    background: #f3f3f3;
+    text-align: center;
+    width: 100%;
+  }
+
+  .logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #5cb85c;
+  }
+  .nav-links-wrapper {
+    margin-left: auto;
+    display: flex;
+    gap: 8px;
+    .nav-link {
+      color: rgba(0, 0, 0, 0.3);
+      font-size: 1.2rem;
+      margin-left: 1rem;
+      &:hover {
+        color: rgba(0, 0, 0, 0.8);
+      }
+      &.active {
+        color: rgba(0, 0, 0, 0.8);
+      }
+    }
+  }
 }
