--- a/src/index.css
+++ b/src/index.css
@@ -127,3 +127,8 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #eaeaea transparent;
+}
